<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearEvaluacion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/btnCreateTxt"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutImplementacion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView_TipoImplementacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:hint="@string/TipoImplementacion"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAplicacion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutImplementacion">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView_TipoAplicacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:hint="@string/TipoAplicacion"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAplicacion">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TipoEvaluacion" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtPublica" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtPrivada" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView7"
                android:labelFor="@+id/edit_textProposito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtProposito"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <EditText
                android:id="@+id/edit_textProposito"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:background="#F6F6F6"
                android:gravity="top"
                android:inputType="text|textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:labelFor="@+id/editTextEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtEmpresa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_textProposito" />

            <EditText
                android:id="@+id/editTextEmpresa"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textViewDateInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtFechaMaxEva"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmpresa" />

            <RelativeLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDateInfo">


                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/txtFormatDate"
                    android:inputType="none"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_datePicker"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toRightOf="@+id/editTextDate"
                    app:backgroundTint="#fff"
                    app:icon="@drawable/icon_calendar"
                    app:iconGravity="top"
                    app:iconTint="@color/Ui_principal"
                    tools:layout_editor_absoluteY="720dp" />

            </RelativeLayout>
            <Button
                android:id="@+id/btn_crear"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="30dp"
                android:text="@string/btnCreateTxt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>