<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Controlador.Login">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_login">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="274dp"
            android:layout_height="116dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="110dp"
            android:contentDescription="@string/dscriptIMGlogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heuristictool1" />

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/TextoMobile"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="319dp"
            android:layout_height="52dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="User"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLogin" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="319dp"
            android:layout_height="52dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="365dp"
            android:layout_height="67dp"
            android:layout_marginTop="48dp"
            android:onClick="Login"
            android:text="@string/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>